--- a/Qlinux-0.0.1/Makefile
+++ b/Qlinux-0.0.1/Makefile
@@ -4,6 +4,23 @@
 # Copyright : @QIUYIXIANG
 # Create on : 2023-07-23
 
+# Include Rules Makefile
+-include $(CURDIR)/Rules.mk
 
-include ./Rules.mk
 
+# Define All Depedencies 
+# DEPENDENCIES	:=	
+
+
+### Main Target
+# Main Target for building this whole project !
+.DEFAULT_GOAL	:=	all
+
+.PHONY: all
+all:
+	@$(call _path_check)
+
+# Clean All the Build Target
+.PHONY: clean
+clean:
+	rm -rf $(GLOBAL_BUILD)
