--- a/Qlinux-0.0.1/kernel/Makefile
+++ b/Qlinux-0.0.1/kernel/Makefile
@@ -1,3 +1,12 @@
 # Makefile For Kernel Component
 
+SCRIPT_PATH	:=	../script
+
+-include $(SCRIPT_PATH)/func.mk
+
+.DEFAULT_GOAL 	:=	main
+
+
+.PHONY: main
+main:
 
