--- a/Qlinux-0.0.1/x86/Makefile
+++ b/Qlinux-0.0.1/x86/Makefile
@@ -2,3 +2,12 @@
 
 # This File Describe Some Rules For Building X86 Architecture Depedent Component
 
+SCRIPT_PATH	:=	../script
+
+-include $(SCRIPT_PATH)/func.mk
+
+.DEFAULT_GOAL 	:=	main
+
+
+.PHONY: main
+main:
