--- a/Qlinux-0.0.1/x86/Makefile
+++ b/Qlinux-0.0.1/x86/Makefile
@@ -17,13 +17,16 @@ BOOT_DIR	:=	./boot
 CPU_DIR		:=	./cpu
 
 # All Small Individual Components
-DEPENDENCIES	:=	boot.bin
+DEPENDENCIES	:=	boot.bin loader.bin
 
 .PHONY: main
 main: $(DEPENDENCIES)
 
-# Rules for building boot.o
+# Rules for building boot.bin
 boot.bin: $(BOOT_DIR)/boot.S
 	$(call dir_check, $(BUILD_PATH))
 	$(NASM) $(NASM_FLAGS) -I$(BOOT_DIR) $< -o $(BUILD_PATH)/$@
 
+# Rules for building loader.bin
+loader.bin: $(BOOT_DIR)/loader.S
+	$(NASM) $(NASM_FLAGS) -I$(BOOT_DIR) $< -o $(BUILD_PATH)/$@
