--- a/Qlinux-0.0.1/kernel/Makefile
+++ b/Qlinux-0.0.1/kernel/Makefile
@@ -6,7 +6,17 @@ SCRIPT_PATH	:=	../script
 
 .DEFAULT_GOAL 	:=	main
 
+# Define Build Path
+BUILD_PATH			:=	$(GLOBAL_BUILD)/kernel
+INCLUDE_RELATIVE	:=	../include
 
+# All Depedencies Define Here
+DEPENDENCIES	:=	main.o
 .PHONY: main
-main:
+main: $(DEPENDENCIES)
+
+# Build For main.o
+main.o: ./main.c
+	$(call dir_check, $(BUILD_PATH))
+	$(GCC) -c $(GCC_FLAGS) -I $(INCLUDE_RELATIVE) $< -o $(BUILD_PATH)/$@
 
