--- a/Qlinux-0.0.2/arch/Makefile
+++ b/Qlinux-0.0.2/arch/Makefile
@@ -4,18 +4,30 @@
 
 .DEFAULT_GOAL 	:=	make_arch
 
-# May Be Supported Architecture
-# Source File Path
+##### Architecture Related Source File Path
+# Machine Architecture --
+# May Be Supported Architecture i386 i686 x86_64
+
+# Source File Path for i386
 SRC_I386		:=	./i386
-SRC_BOOT		:=	$(SRC_I386)/boot
+SRC_I386_BOOT	:=	$(SRC_I386)/boot
+SRC_I386_CPU	:=	$(SRC_I386)/cpu
+
+# Source File Path For x86_64
+# Reversed Name Space
 SRC_X86_64		:=	./x86_64
 
 BUILD_PATH				:=	../build/arch
 DEPEDENCIES_PATH		:=	../build/dep
 INCLUDE_PATH			:=	../include
 
-# Objects File Need To Build
-OBJECTS			:=	
+# Source File Path For Monitor
+SRC_MONITOR				:=	./monitor
+
+###### Objects File List
+# Objects File List Need To Build
+OBJECTS			:=		$(BUILD_PATH)/vga.o
+
 DEPEDENT_INCLUDE_DIR	:=	$(wildcard $(DEPEDENCIES_PATH)/*.d)
 
 
@@ -29,13 +41,20 @@ ifeq ($(ARCH), x86_64)
 OBJECTS			+=	
 endif 
 
+### Auxiliary GNU GCC Flags
+GCC_INCLUDE_FLAGS	:= -I $(INCLUDE_PATH)
+
+##### Build Related Targets
 .PHONY: make_arch 
 make_arch: $(OBJECTS)
 
 # Build For i386 Boot
-$(BUILD_PATH)/%.o:$(SRC_BOOT)/%.S
-	$(call execute, $(GCC) $(GCC_FLAGS) -c -I $(INCLUDE_PATH) -MD -MF $(DEPEDENCIES_PATH)/$*.d  $< -o $@)
+$(BUILD_PATH)/%.o:$(SRC_I386_BOOT)/%.S
+	$(call execute, $(GCC) $(GCC_FLAGS) -c $(GCC_INCLUDE_FLAGS) -MD -MF $(DEPEDENCIES_PATH)/$*.d  $< -o $@)
 
+# Build For Monitor
+$(BUILD_PATH)/%.o:$(SRC_MONITOR)/%.c
+	$(call execute, $(GCC) $(GCC_FLAGS) -c $(GCC_INCLUDE_FLAGS) -MD -MF $(DEPEDENCIES_PATH)/$*.d $< -o $@)
 
 -include $(DEPEDENT_INCLUDE_DIR)
 
